hw3/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
  labels:
    app: my-app
spec:
  containers:
    - name: my-app
      image: my-app-img:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 5003
      volumeMounts:
        - name: log-volume
          mountPath: /my-app/app/logs
  volumes:
    - name: log-volume
      emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
