hw3/kubernetes/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: space-with-istio
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: "/api"
        - uri:
            prefix: "/metrics"
      route:
        - destination:
            host: my-app-service.space-with-istio.svc.cluster.local
            port:
              number: 5003
    - match:
        - uri:
            prefix: "/"
      directResponse:
        status: 404
        body:
          string: "Not Found"
